# data-structures-and-algorithms

./: .editorconfig  .markdownlint.json  .prettierignore  README.md  package-lock.json  package.json  practice.js
python/: README.md  practice.py  pyproject.toml
python/animal_shelter/: README.md  animal_shelter.py
python/breadth_first/: README.md  breadth_first.py
python/challenge32/: README.md  challenge32.py
python/class_practice/: practice.py
python/doubly_linked_list/: doubly_linked_list.py
python/fizz_buzz_tree/: README.md  fizz_buzz_tree.py
python/graph/: README.md  graph.py
python/graph_business_trip/: README.md  graph_business_trip.py
python/graphs/: README.md
python/hashtable/: README.md  hashtable.py
python/left_join/: README.md  left_join.py
python/linked_list/: README.md  linked_list.py  test_linked_list.py
python/queues/: README.md
python/repeated_word/: README.md  repeated_word.py
python/sort_insertion/: README.md
python/sort_merge/: README.md
python/sort_quick/: README.md  quick_sort.py
python/stack_queue_bracket/: README.md  stack_queue_bracket.py
python/stack_queue_pseudo/: README.md
python/stacks/: README.md  stacks.py
python/tests/: test_animal_shelter.py  test_breadth_first.py  test_challenge32.py  test_first_repeated_word.py  test_fizz_buzz_tree.py  test_graph.py  test_graph_business_trip.py  test_hashtable.py  test_insertion_sort.py  test_left_join.py  test_linked_list.py  test_merge_sort.py  test_queue.py  test_quick_sort.py  test_stack_queue_bracket.py  test_stack_queue_pseudo.py  test_stacks.py  (+2 more)
(+133 files in other folders)
