[tool.poetry]
name = "dsa"
version = "0.1.0"
description = ""
authors = ["Davee Sok <daveesok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
black = "^21.6b0"

[tool.poetry.dev-dependencies]
pytest-watch = "^4.2.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
